# exrandom-mirror

./: 00README.txt  CMakeLists.txt  LICENSE.txt
cmake/: CMakeLists.txt  project-config-version.cmake.in  project-config.cmake.in
doc/: CMakeLists.txt  doxyfile.in  exrandom.dox
examples/: CMakeLists.txt  Makefile  chisq_test.cpp  compare_times.cpp  count_bits.cpp  discrete_count_bits.cpp  exrandom_test.cpp  hist_data.cpp  makefile.vc  sample_discrete_normal.cpp  sample_distributions.cpp  sample_exponential.cpp  sample_normal.cpp  sample_uniform.cpp  simple_discrete_normal.cpp  simple_exponential.cpp  simple_normal.cpp  simple_uniform.cpp  tabulate_normals.cpp
include/exrandom/: CMakeLists.txt  aux_info.hpp  digit_arithmetic.hpp  discrete_normal_dist.hpp  discrete_normal_distribution.hpp  exrandom_config.hpp  i_rand.hpp  rand_digit.hpp  rand_table.hpp  table_gen.hpp  u_rand.hpp  unit_exponential_dist.hpp  unit_exponential_distribution.hpp  unit_normal_dist.hpp  unit_normal_distribution.hpp  unit_normal_kahn.hpp  unit_uniform_dist.hpp  unit_uniform_distribution.hpp
multiprec/: CMakeLists.txt  mpfr_times.cpp  multiprec_test.cpp
